finish draft of cleanup notebook

--- a/notebooks/cleanup.ipynb
+++ b/notebooks/cleanup.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "(490815, 24)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "(12652, 26)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,14 +294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-12-0536b9767fc4>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-106-0536b9767fc4>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "Name: Status, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,138 +386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>BusinessCount_dup</th>\n",
-       "      <th>ShareofTotal_dup</th>\n",
-       "      <th>BusinessCount_full</th>\n",
-       "      <th>ShareofTotal_full</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>One-Family Dwelling</th>\n",
-       "      <td>3144</td>\n",
-       "      <td>0.324995</td>\n",
-       "      <td>24711</td>\n",
-       "      <td>0.050347</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Apartment House Strata</th>\n",
-       "      <td>938</td>\n",
-       "      <td>0.096961</td>\n",
-       "      <td>13905</td>\n",
-       "      <td>0.028330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Multiple Dwelling</th>\n",
-       "      <td>859</td>\n",
-       "      <td>0.088795</td>\n",
-       "      <td>8812</td>\n",
-       "      <td>0.017954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Live-aboards</th>\n",
-       "      <td>726</td>\n",
-       "      <td>0.075047</td>\n",
-       "      <td>730</td>\n",
-       "      <td>0.001487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Duplex</th>\n",
-       "      <td>582</td>\n",
-       "      <td>0.060161</td>\n",
-       "      <td>7186</td>\n",
-       "      <td>0.014641</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Exhibitions/Shows/Concerts</th>\n",
-       "      <td>466</td>\n",
-       "      <td>0.048170</td>\n",
-       "      <td>1164</td>\n",
-       "      <td>0.002372</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Temp Liquor Licence Amendment</th>\n",
-       "      <td>438</td>\n",
-       "      <td>0.045276</td>\n",
-       "      <td>1146</td>\n",
-       "      <td>0.002335</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Secondary Suite - Permanent</th>\n",
-       "      <td>298</td>\n",
-       "      <td>0.030804</td>\n",
-       "      <td>17495</td>\n",
-       "      <td>0.035645</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Contractor</th>\n",
-       "      <td>204</td>\n",
-       "      <td>0.021087</td>\n",
-       "      <td>30662</td>\n",
-       "      <td>0.062472</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Office</th>\n",
-       "      <td>181</td>\n",
-       "      <td>0.018710</td>\n",
-       "      <td>80090</td>\n",
-       "      <td>0.163178</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                               BusinessCount_dup  ShareofTotal_dup  \\\n",
-       "One-Family Dwelling                         3144          0.324995   \n",
-       "Apartment House Strata                       938          0.096961   \n",
-       "Multiple Dwelling                            859          0.088795   \n",
-       "Live-aboards                                 726          0.075047   \n",
-       "Duplex                                       582          0.060161   \n",
-       "Exhibitions/Shows/Concerts                   466          0.048170   \n",
-       "Temp Liquor Licence Amendment                438          0.045276   \n",
-       "Secondary Suite - Permanent                  298          0.030804   \n",
-       "Contractor                                   204          0.021087   \n",
-       "Office                                       181          0.018710   \n",
-       "\n",
-       "                               BusinessCount_full  ShareofTotal_full  \n",
-       "One-Family Dwelling                         24711           0.050347  \n",
-       "Apartment House Strata                      13905           0.028330  \n",
-       "Multiple Dwelling                            8812           0.017954  \n",
-       "Live-aboards                                  730           0.001487  \n",
-       "Duplex                                       7186           0.014641  \n",
-       "Exhibitions/Shows/Concerts                   1164           0.002372  \n",
-       "Temp Liquor Licence Amendment                1146           0.002335  \n",
-       "Secondary Suite - Permanent                 17495           0.035645  \n",
-       "Contractor                                  30662           0.062472  \n",
-       "Office                                      80090           0.163178  "
+       "'|                               |   BusinessCount_dup |   ShareofTotal_dup |   BusinessCount_full |   ShareofTotal_full |\\n|:------------------------------|--------------------:|-------------------:|---------------------:|--------------------:|\\n| One-Family Dwelling           |                3144 |          0.324995  |                24711 |          0.0503469  |\\n| Apartment House Strata        |                 938 |          0.0969609 |                13905 |          0.0283304  |\\n| Multiple Dwelling             |                 859 |          0.0887947 |                 8812 |          0.0179538  |\\n| Live-aboards                  |                 726 |          0.0750465 |                  730 |          0.00148732 |\\n| Duplex                        |                 582 |          0.0601613 |                 7186 |          0.014641   |\\n| Exhibitions/Shows/Concerts    |                 466 |          0.0481704 |                 1164 |          0.00237157 |\\n| Temp Liquor Licence Amendment |                 438 |          0.045276  |                 1146 |          0.00233489 |\\n| Secondary Suite - Permanent   |                 298 |          0.0308042 |                17495 |          0.0356448  |\\n| Contractor                    |                 204 |          0.0210875 |                30662 |          0.0624716  |\\n| Office                        |                 181 |          0.0187099 |                80090 |          0.163178   |'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +415,7 @@
     "\n",
     "df1.columns = ['BusinessCount_dup', 'ShareofTotal_dup', 'BusinessCount_full', 'ShareofTotal_full']\n",
     "\n",
-    "df1"
+    "df1.to_markdown()"
    ]
   },
   {
@@ -572,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +462,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop businesses that don't appear in more than one year\n",
+    "df['max_year'] = df.groupby('id')['FOLDERYEAR'].transform('max')\n",
+    "df['min_year'] = df.groupby('id')['FOLDERYEAR'].transform('min')\n",
+    "df['years_active'] = df['FOLDERYEAR'] - df['min_year']\n",
+    "df['lifespan'] = df['max_year'] - df['min_year']\n",
+    "# drops all businesses without records before 2020\n",
+    "df = df.loc[~((df['lifespan']==0) & (df['FOLDERYEAR']==df['FOLDERYEAR'].max()))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -595,11 +488,11 @@
        "       'ExpiredDate', 'BusinessType', 'BusinessSubType', 'Unit', 'UnitType',\n",
        "       'House', 'Street', 'City', 'Province', 'Country', 'PostalCode',\n",
        "       'LocalArea', 'NumberofEmployees', 'FeePaid', 'ExtractDate', 'Geom',\n",
-       "       'id', 'year_id'],\n",
+       "       'id', 'year_id', 'max_year', 'min_year', 'years_active', 'lifespan'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,21 +506,6 @@
    "metadata": {},
    "source": [
     "### Cleanup `Status` and calculate lifespan of business"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# drop businesses that don't appear in more than one year\n",
-    "df['max_year'] = df.groupby('id')['FOLDERYEAR'].transform('max')\n",
-    "df['min_year'] = df.groupby('id')['FOLDERYEAR'].transform('min')\n",
-    "df['years_active'] = df['FOLDERYEAR'] - df['min_year']\n",
-    "df['lifespan'] = df['max_year'] - df['min_year']\n",
-    "# drops all businesses without records before 2020\n",
-    "df = df.loc[df['lifespan']!=0]"
    ]
   },
   {
@@ -645,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 114,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -658,7 +536,7 @@
        "\"\\nnever_issued = df.groupby('id')['Status'].apply(lambda x: 'Issued' not in x.unique())\\n\\n# never_issued.name = 'never_issued'\\nnever_issued = never_issued[never_issued==True].index\\n\\ndf.loc[\\n    (df['id'].isin(never_issued)), \\n    disp_cols+['IssuedDate']\\n].sort_values(['id', 'FOLDERYEAR'])[200:250]\\n\""
       ]
      },
-     "execution_count": 20,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -738,13 +616,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GOB</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5515.0</td>\n",
-       "      <td>8198.0</td>\n",
-       "      <td>10278.0</td>\n",
-       "      <td>9567.0</td>\n",
-       "      <td>11756.0</td>\n",
-       "      <td>14659.0</td>\n",
+       "      <td>11452.0</td>\n",
+       "      <td>12153.0</td>\n",
+       "      <td>11565.0</td>\n",
+       "      <td>13237.0</td>\n",
+       "      <td>12487.0</td>\n",
+       "      <td>17040.0</td>\n",
+       "      <td>21326.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -799,7 +677,7 @@
        "FOLDERYEAR                 13       14       15       16       17       18  \\\n",
        "new_status                                                                   \n",
        "Cancelled               119.0     66.0    107.0    102.0     90.0     91.0   \n",
-       "GOB                       NaN   5515.0   8198.0  10278.0   9567.0  11756.0   \n",
+       "GOB                   11452.0  12153.0  11565.0  13237.0  12487.0  17040.0   \n",
        "Gone Out of Business    173.0    206.0    206.0    256.0     75.0     88.0   \n",
        "Inactive                 63.0     79.0     98.0     96.0    121.0     76.0   \n",
        "Issued                44120.0  42106.0  42872.0  43102.0  41895.0  38825.0   \n",
@@ -808,14 +686,14 @@
        "FOLDERYEAR                 19       20  \n",
        "new_status                              \n",
        "Cancelled                51.0   2359.0  \n",
-       "GOB                   14659.0      NaN  \n",
+       "GOB                   21326.0      NaN  \n",
        "Gone Out of Business    220.0   3080.0  \n",
        "Inactive                 77.0    859.0  \n",
        "Issued                36265.0  40412.0  \n",
        "Pending                4582.0   4678.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1022,7 @@
        "495162               Pending  996     3099        20        13  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1184,12 +1062,12 @@
        "Ltd Service Food Establishment     57\n",
        "Contractor - Special Trades        49\n",
        "One-Family Dwelling                31\n",
-       "Health Services                    28\n",
        "Secondary Suite - Permanent        28\n",
+       "Health Services                    28\n",
        "Name: BusinessType, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1108,7 @@
        "Name: new_status, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1431,7 @@
        "333878  13966    45524        20        19  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
